# web-irc-docbot

./: .gitignore  CMakeLists.txt  LICENSE  NOTES  README.md  main.cpp
bot/: CMakeLists.txt  application.cpp  application.hpp  bot.cpp  bot.hpp  commands.cpp  commands.hpp  documentor.cpp  documentor.hpp  irc_connection.cpp  irc_connection.hpp  irc_traits.hpp  main.cpp
core/: CMakeLists.txt  bootstrap.cpp  bootstrap.hpp  utilities.cpp  utilities.hpp
core/models/: CMakeLists.txt  account_data.cpp  account_data.hpp  model.cpp  model.hpp  user.cpp  user.hpp  user_data.cpp  user_data.hpp  user_traits.hpp
public/shared/logs/: FOR_COMMIT
sql/: 000-dbinitialization.sql  001-insert_base_data.sql
web/: CMakeLists.txt  application.cpp  application.hpp  interface.cpp  interface.hpp  main.cpp
